[project]
name = "Barcode"
version = "1.0.0"
description = "Receipt Printing App for AKBER TIKKA"
authors = [
  { name = "Abdul", email = "abdul.it7@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "flet-barcode-scanner @ git+https://github.com/AyberkA0/flet-barcode-scanner",
 
]

[tool.flet]
org = "Barcode"
product = "Barcode"
company = "Barcode"
copyright = "Copyright (C) 2025 AKBER TIKKA"
build_number = 1
app.module = "main"
app.path = "."
app.exclude = ["assets"]

[tool.flet.android]
adaptive_icon_background = ""
split_per_abi = false

[tool.flet.android.permission]
"android.permission.BLUETOOTH" = true
"android.permission.BLUETOOTH_ADMIN" = true
"android.permission.BLUETOOTH_CONNECT" = true
"android.permission.BLUETOOTH_SCAN" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.CAMERA" = true
